infra/k8s-production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: techbay-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: techbay.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-srv
            port:
              number: 3000
  - host: api.techbay.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-srv
            port:
              number: 5000
